--- a/css/development.css
+++ b/css/development.css
@@ -7,3 +7,107 @@
 .second-year-wrapper {
     padding-top: .83em;
 }
+
+
+.cards-section {
+    padding: 4rem 0;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .cards-container {
+    display: flex;
+    gap: 3rem;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .design-card {
+    width: 500px;
+    min-height: 620px;
+    border-radius: 40px;
+    padding: 2.5rem;
+    position: relative;
+    color: #1C213A;
+    font-family: 'Space Grotesk', sans-serif;
+  }
+  
+  .gold-card {
+    background: rgba(242, 193, 78, 1);
+  }
+  
+  .rust-card {
+    background: rgba(191, 104, 27, 1);
+    color: #1C213A;
+  }
+  
+  .card-title1, .card-title2{
+    font-family: 'adonais';
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+  }
+  .card-title1{
+    color: #BF681B
+  }
+  .card-title2{
+    color: #FFDC89;
+
+  }
+  
+  .card-text1, .card-text2 {
+    font-family:funnel display; 
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin-bottom: 3rem;
+  }
+  .card-text1{
+    color: #914C10
+  }
+  .card-text2{
+    color: #FFDC89;
+
+  }
+  
+  .card-link {
+    font-size: 1rem;
+    color: #ffffff;
+    text-decoration: underline;
+    margin-bottom: 2rem;
+    display: inline-block;
+  }
+  
+  .submit-button1, .submit-button2 {
+    display: block;
+    margin: 0 auto;
+    font-family: 'Space Grotesk';
+    background: #1C213A;
+    color: white;
+    border: none;
+    padding: 0.8rem 2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+  }
+  
+  .submit-button:hover {
+    background: #000;
+  }
+  
+  .card-art {
+    position: absolute;
+    bottom: 0;
+    left: 0;        
+    width: 180px;
+
+    pointer-events: none; 
+  }
+  
+  
+  /* Responsive */
+  @media screen and (max-width: 1100px) {
+    .cards-container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  
