--- a/css/development.css
+++ b/css/development.css
@@ -48,7 +48,7 @@
   .card-title1, .card-title2{
     font-family: 'adonais';
     font-size: 1.8rem;
-    margin-bottom: 1.5rem;
+    /* margin-bottom: 1.5rem; */
   }
   .card-title1{
     color: #BF681B
@@ -118,15 +118,51 @@
     
     color: #13181C;
   }
+  .submit-button3, .submit-button4{
+    font-family: funnel display;
+    /* background: #FFCB51; */
+    color: #13181C;
+    border: none;
+    padding: 0.8rem 2rem;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: auto;      
+    /* align-self: flex-start;  */
+    position: absolute;
+    bottom: 25px;     
+    left: 30%;
+    transform: translateX(-50%);
+  }
+  .submit-button3{
+    font-family: funnel display;
+    background: #BF681B;
+    color: #FFFFFF;
+  }
+  .submit-button4{
+    font-family: funnel display;
+    background:#FFCB51;
+    
+    color: #13181C;
+  }
+
   
-  .submit-button:hover {
+  /* .submit-button:hover {
     background: #000;
   }
-  
+   */
   .card-art {
     position: absolute;
     bottom: 0;
     left: 0;        
+    width: 200px;
+    pointer-events: none; 
+    border-radius: 20px;
+  }
+  .card-art2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;        
     width: 200px;
     pointer-events: none; 
     border-radius: 20px;
