Update design page colors and center problem statement headings

--- a/css/base.css
+++ b/css/base.css
@@ -291,7 +291,7 @@ footer {
   /* background-position: center; */
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .page-heading {
