--- a/css/base.css
+++ b/css/base.css
@@ -268,6 +268,7 @@ footer {
   text-transform: uppercase;
   transition: background 0.3s;
   cursor: pointer;
+  margin-top: -4em;
 }
 
 .discord-join-button:hover {
