--- a/css/development_mobile.css
+++ b/css/development_mobile.css
@@ -63,58 +63,78 @@
         width: 100%;
         max-width: 100%;
         min-height: auto;
+        height: auto;
         padding: 1.5rem;
         border-radius: 24px;
     }
 
+    .card-header {
+        margin-bottom: 0.75rem;
+    }
+
     .card-title1, .card-title2 {
         font-size: 1.3rem;
-        margin-bottom: 0.75rem;
+        margin: 0;
         text-align: left;
         white-space: normal;
+        height: auto;
+        line-height: 1.4rem;
+    }
+
+    .card-body {
+        margin-bottom: 1rem;
     }
 
     .card-text1, .card-text2 {
         font-size: 0.85rem;
         line-height: 1.3rem;
-        margin-bottom: 2rem;
+        margin: 0;
         text-align: left;
         padding-right: 0.5rem;
     }
 
+    .card-footer {
+        margin-top: 1rem;
+        gap: 0.75rem;
+    }
+
+    .card-deadline {
+        font-size: 0.85rem;
+        line-height: 1.3rem;
+    }
+
     .card-link1, .card-link2 {
         position: relative;
-        bottom: auto;
-        left: auto;
-        right: auto;
-        transform: none;
-        margin-bottom: 0.75rem;
+        margin: 0;
         display: block;
         text-align: left;
         font-size: 0.85rem;
+        align-self: flex-start;
     }
 
     /* Design page - mobile: keep links on right */
+    .design-page .card-footer {
+        align-items: flex-end;
+    }
+
     .design-page .card-link1, .design-page .card-link2 {
         text-align: right;
+        align-self: flex-end;
     }
 
     .submit-button1, .submit-button2, .submit-button3, .submit-button4 {
         position: relative;
-        bottom: auto;
-        left: auto;
-        right: auto;
-        transform: none;
+        margin: 0;
         width: auto;
-        margin-top: 0;
         display: inline-block;
         padding: 0.6rem 1.4rem;
         font-size: 0.8rem;
+        align-self: flex-start;
     }
 
     /* Design page - mobile: keep buttons on right */
     .design-page .submit-button1, .design-page .submit-button2 {
-        float: right;
+        align-self: flex-end;
     }
 
     .card-art, .card-art2 {
@@ -158,29 +178,60 @@
         border-radius: 20px;
     }
 
+    .card-header {
+        margin-bottom: 0.5rem;
+    }
+
     .card-title1, .card-title2 {
         font-size: 1.2rem;
         text-align: left;
         white-space: normal;
-        margin-bottom: 0.5rem;
+        margin: 0;
+        height: auto;
+        line-height: 1.3rem;
+    }
+
+    .card-body {
+        margin-bottom: 0.75rem;
     }
 
     .card-text1, .card-text2 {
         font-size: 0.8rem;
         line-height: 1.25rem;
         text-align: left;
-        margin-bottom: 1.5rem;
+        margin: 0;
         padding-right: 0.5rem;
+    }
+
+    .card-footer {
+        margin-top: 0.75rem;
+        gap: 0.5rem;
+    }
+
+    .card-deadline {
+        font-size: 0.8rem;
+        line-height: 1.25rem;
     }
 
     .card-link1, .card-link2 {
         font-size: 0.8rem;
-        margin-bottom: 0.5rem;
+        margin: 0;
+        align-self: flex-start;
+    }
+
+    .design-page .card-link1, .design-page .card-link2 {
+        align-self: flex-end;
     }
 
     .submit-button1, .submit-button2, .submit-button3, .submit-button4 {
         padding: 0.55rem 1.2rem;
         font-size: 0.75rem;
+        margin: 0;
+        align-self: flex-start;
+    }
+
+    .design-page .submit-button1, .design-page .submit-button2 {
+        align-self: flex-end;
     }
 
     .card-art, .card-art2 {
